fixed [RUBY-4207] : TODO's only highlight with the default color

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -602,6 +602,7 @@ group.todo.filter.patterns=Patterns
 column.todo.filters.name=Name
 column.todo.filter.patterns=Patterns
 checkbox.case.sensitive=Case Sensitive
+checkbox.todo.use.default.colors=Use color scheme TODO default colors
 label.todo.pattern=Pattern:
 label.todo.icon=Icon:
 column.todo.patterns.icon=Icon
