file based project view implementation

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -569,6 +569,7 @@ command.renaming.module=Renaming module {0}
 prompt.enter.new.module.name=Enter new module name
 tooltip.ui.designer.form=UI Designer Form
 node.projectview.libraries=Libraries
+node.projectview.external.libraries=External Libraries
 tooltip.module.group=Module Group
 node.projectview.library={0} library
 node.projectview.jdk=JDK
