Duplicates searcher UI redesigned

--- a/platform/platform-resources-en/src/messages/DupLocatorBundle.properties
+++ b/platform/platform-resources-en/src/messages/DupLocatorBundle.properties
@@ -1,4 +1,5 @@
 duplication.title=Code Duplication Analysis
+duplication.enabled=Enabled
 duplication.scope.name.prefix=Analysis
 duplicate.dialog.title=Code Duplication Analysis Settings
 duplication.progress=Code Duplication Analysis
