convert to thread local

--- a/plugins/typeMigration/src/META-INF/plugin.xml
+++ b/plugins/typeMigration/src/META-INF/plugin.xml
@@ -6,6 +6,9 @@
     <intentionAction>
       <className>com.intellij.refactoring.typeMigration.intentions.ConvertFieldToAtomicIntention</className>
     </intentionAction>
+    <intentionAction>
+      <className>com.intellij.refactoring.typeMigration.intentions.ConvertFieldToThreadLocalIntention</className>
+    </intentionAction>
   </extensions>
   <actions>
     <group id="Type Migration">
