--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -25,16 +25,16 @@ ide.debugMode=true
 ide.debugMode.description=Record additonal information to make bug reports more informative
 ide.forcedShowTooltip=alt
 ide.forcedShowTooltip.description=Shortcut for forced show tooltip
-ide.tree.yeildingUiUpdate=true
 ide.popup.dropShadow=false
+
+ide.tree.yeildingUiUpdate=true
 ide.tree.showBusyIndicator=true
 ide.tree.waitForReadyTimout=250
 ide.tree.clearOnHideTime=120000
 ide.tree.autoscrollToVCenter=true
+ide.tree.ensureSelectionOnFocusGained=true
+
 ide.tabbedPane.bufferedPaint=true
 
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
-
-
-
