--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -51,13 +51,15 @@ progress.text.facet.indices.format.has.changed.redetecting.facets=Facet indices 
 progress.text.detecting.facets=Detecting facets...
 
 facet.autodetected.info.text=<html><body><font face="verdana"> \
-   <font size="4"><b>New {0} Facet Detected</b></font> <br> \
-   <font size="3">{1}\
+   <font size="3">{1}<br> \
+   <a href="create">Create {0} Facet</a><br> \
+   <a href="disable">Don''t detect {0} Facets in module</a>\
 </font></font></body></html>
 facet.autodetected.popup.default.text=<b>{0}</b><br> \
    from module <b>{1}</b> appears to be a <b>{2} Facet</b> descriptor
 notification.name.0.facets.detected={0} facets detected
 notification.name.0.facet.detected={0} facet detected
+facet.autodetection.several.facets.detected.text=<html><body><font face="verdana">{0} facets detected. <a href="more">More...</a></font></body></html>
 
 progress.text.searching.facets=Searching for facets. Please wait.
 message.text.stop.searching.for.facets={0} is currently searching for facets. Would you like to stop the search?
