--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -555,7 +555,6 @@ thread.run.display.name=Call to 'Thread.run()'
 non.synchronized.method.overrides.synchronized.method.display.name=Unsynchronized method overrides synchronized method
 constant.on.rhs.of.comparison.display.name=Constant on right side of comparison
 synchronize.on.this.display.name=Synchronization on 'this'
-single.character.starts.with.display.name=Single character 'startsWith()' or 'endsWith()'
 switch.statement.with.too.many.branches.display.name='switch' statement with too many branches
 utility.class.without.private.constructor.display.name=Utility class without private constructor
 throw.caught.locally.display.name='throw' caught by containing 'try' statement
@@ -962,7 +961,8 @@ unnecessary.this.problem.descriptor=<code>#ref</code> is unnecessary in this con
 unnecessary.block.statement.problem.descriptor=Braces around this statement are unnecessary #loc
 unnecessary.continue.problem.descriptor=<code>#ref</code> is unnecessary as the last statement in a loop #loc
 unnecessary.semicolon.problem.descriptor=Unnecessary semicolon <code>#ref</code> #loc
-unnecessary.fully.qualified.name.problem.descriptor=Fully qualified name <code>#ref</code> is unnecessary, and can be replaced with an import #loc
+unnecessary.fully.qualified.name.problem.descriptor1=Fully qualified name <code>#ref</code> is unnecessary, and can be replaced with an import #loc
+unnecessary.fully.qualified.name.problem.descriptor2=Fully qualified name <code>#ref</code> is unnecessary, and the qualification can be removed #loc
 unnecessary.qualifier.for.this.problem.descriptor=Qualifier <code>#ref</code> on 'this' is unnecessary in this context #loc
 unused.label.problem.descriptor=Unused label <code>#ref</code> #loc
 redundant.field.initialization.problem.descriptor=Field initialization to <code>#ref</code> is redundant #loc
@@ -1347,6 +1347,7 @@ redundant.implements.remove.quickfix=Remove redundant interface declaration
 unnecessary.constructor.remove.quickfix=Remove redundant constructor
 unnecessary.fully.qualified.name.ignore.option=Ignore fully qualified names in javadoc
 unnecessary.fully.qualified.name.replace.quickfix=Replace with import
+unnecessary.fully.qualified.name.remove.quickfix=Remove qualification
 unnecessary.fully.qualified.name.status.bar.escape.highlighting.message1=1 fully qualified name replaced with import (press Escape to remove highlighting)
 unnecessary.fully.qualified.name.status.bar.escape.highlighting.message2={0} fully qualified names replaced with import (press Escape to remove highlighting)
 unnecessary.parentheses.remove.quickfix=Remove unnecessary parentheses
