combobox instead of buttons on the LogConsole panel

--- a/platform/platform-resources-en/src/messages/DiagnosticBundle.properties
+++ b/platform/platform-resources-en/src/messages/DiagnosticBundle.properties
@@ -56,5 +56,7 @@ log.monitor.edit.aliases.title=Edit Log Files Aliases
 log.monitor.edit.aliases.name=&Alias:
 log.monitor.edit.aliases.location=&Log File Location:
 log.monitor.edit.aliases.show.all.checkbox.title=&Show All Files Coverable By Pattern
-log.console.filter.by.type=Hide {0}''s
+log.console.filter.show.errors=Show errors only
+log.console.filter.show.errors.and.warnings=Show errors and warnings
+log.console.filter.show.all=Show all
 title.submitting.error.report=Submitting error report
