IDEADEV-40058: Groovy 1.7 features should not be supported in modules with Groovy < 1.7 configured

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -260,6 +260,17 @@ are.you.sure.to.delete.elements=Are you sure to delete ''{0}'' elements?
 dynamic.element.deletion=Dynamic element deletion
 dynamic.window=Dynamic window
 dynamic.properties.table.no.arguments=Arguments list is empty.
+assignment.expected='=' expected
+tuple.cant.be.placed.in.class=Multiple assignments are not allowed for fields
+immutable.class.should.be.final=Class with '@Immutable' annotation should be final
+singleton.class.should.have.private.constructor=Class with '@Singleton' annotation should have private constructor
+qualified.new.of.static.class=Qualified new of static class
+cannot.have.static.declarations=Inner classes cannot have static declarations
+unknown.class=unknown class ''{0}''
+is.not.enclosing.class=''{0}'' is not an enclosing class
+package.definition.cannot.have.modifiers=Package definiton cannot have modifiers
+inner.classes.are.not.suported=Inner classes are not supported in Groovy {0}
+anonymous.classes.are.not.suported=Anonymous classes are not supported in Groovy {0}
 
 ########################################################################################################################
 # Facet configuration
@@ -281,12 +292,4 @@ groovy.like.library.found.text=Do you want to set up Groovy facet for module ''{
 with found library ''{1}'' (Groovy version {2})?
 compile.groovy.files=&Compile Groovy files
 copy.groovy.files.to.output=Copy Groovy files to output as &resources
-assignment.expected='=' expected
-tuple.cant.be.placed.in.class=Multiple assignments are not allowed for fields
-immutable.class.should.be.final=Class with '@Immutable' annotation should be final
-singleton.class.should.have.private.constructor=Class with '@Singleton' annotation should have private constructor
-qualified.new.of.static.class=Qualified new of static class
-cannot.have.static.declarations=Inner classes cannot have static declarations
-unknown.class=unknown class ''{0}''
-is.not.enclosing.class=''{0}'' is not an enclosing class
-package.definition.cannot.have.modifiers=Package definiton cannot have modifiers
+
