JavaDoc paths -> Documentation Paths

--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -88,7 +88,7 @@ sdk.configure.save.settings.error=Cannot Save Settings
 sdk.configure.editor.title=JDK Editor
 sdk.configure.classpath.tab=Classpath
 sdk.configure.sourcepath.tab=Sourcepath
-sdk.configure.javadoc.tab=JavaDoc Paths
+sdk.configure.javadoc.tab=Documentation Paths
 sdk.configure.type.home.path={0} home path:
 sdk.configure.general.home.path=SDK home path:
 sdk.configure.home.invalid.error=The selected directory is not a valid home for {0}
