Paste... -> Paste from History...

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -250,7 +250,7 @@ action.CopyReference.text=Copy Re_ference
 action.CopyReference.description=Copy Java class/method/field reference
 action.$Paste.text=_Paste
 action.$Paste.description=Paste from clipboard
-action.PasteMultiple.text=Past_e...
+action.PasteMultiple.text=Past_e from History...
 action.PasteMultiple.description=Paste from recent clipboards
 action.$SelectAll.text=Select _All
 action.$SelectAll.description=Select all
