--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -32,6 +32,10 @@
     <extensionPoint name="positionManagerDelegate" interface="org.jetbrains.plugins.groovy.extensions.debugger.ScriptPositionManagerHelper"/>
     <extensionPoint name="compilerExtension" interface="org.jetbrains.plugins.groovy.compiler.GroovyCompilerExtension"/>
     <extensionPoint name="scriptType" interface="org.jetbrains.plugins.groovy.extensions.GroovyScriptTypeEP"/>
+
+    <!-- Groovy DSL extension points -->
+    <extensionPoint name="psiEnhancerCategory" interface="org.jetbrains.plugins.groovy.dsl.psi.PsiEnhancerCategory"/>
+
   </extensionPoints>
 
   <extensions defaultExtensionNs="org.intellij.groovy">
@@ -48,6 +52,9 @@
 
     <scriptType extensions="gant" descriptorClass="org.jetbrains.plugins.groovy.gant.GantScriptType"/>
     <scriptType extensions="gradle" descriptorClass="org.jetbrains.plugins.groovy.gradle.GradleScriptType"/>
+
+    <!-- GroovyDSL extensions -->
+    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.augmenters.PsiClassCategory"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij">
