--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -35,6 +35,7 @@
 
     <!-- Groovy DSL extension points -->
     <extensionPoint name="psiEnhancerCategory" interface="org.jetbrains.plugins.groovy.dsl.psi.PsiEnhancerCategory"/>
+    <extensionPoint name="gdslTopLevelProvider" interface="org.jetbrains.plugins.groovy.dsl.dsltop.GdslTopLevelMembersProvider"/>
 
   </extensionPoints>
 
@@ -54,7 +55,11 @@
     <scriptType extensions="gradle" descriptorClass="org.jetbrains.plugins.groovy.gradle.GradleScriptType"/>
 
     <!-- GroovyDSL extensions -->
-    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.augmenters.PsiClassCategory"/>
+    <gdslTopLevelProvider implementation="org.jetbrains.plugins.groovy.dsl.dsltop.GroovyDslDefaultMembers"/>
+    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.psi.PsiClassCategory"/>
+    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.psi.PsiElementCategory"/>
+    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.psi.PsiMethodCategory"/>
+    <psiEnhancerCategory implementation="org.jetbrains.plugins.groovy.dsl.psi.GrExpressionCategory"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij">
