text and description

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -283,6 +283,8 @@ action.FindUsages.text=Find _Usages...
 action.FindUsages.description=Find usages of the symbol at caret
 action.ShowUsages.text=_Show Usages
 action.ShowUsages.description=Show usages of the symbol at caret
+action.ShowUsagesSettings.text=_Show Usages Settings
+action.ShowUsagesSettings.description=Choose scope and edit options for the Show Usages action
 action.FindUsagesInFile.text=F_ind Usages in File
 action.FindUsagesInFile.description=Find usages of the symbol at caret in active editor
 action.HighlightUsagesInFile.text=_Highlight Usages in File
