Tracking changes in changelists: fixes

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -530,5 +530,5 @@ annotation.original.revision.text=Revision: {0}
 annotation.switch.to.original.text=Hide merge sources
 annotation.switch.to.merged.text=Show merge sources
 all.vcs.init.message.text=Initializing VCS...
-switch.to.changelist=Switch &to changelist ({0})
-move.to.changelist=&Move changes to active changelist ({0})
+switch.to.changelist=Switch &to changelist (''{0}'')
+move.to.changelist=&Move changes to active changelist (''{0}'')
