renamed 'dataflow' to 'analyze dataflow'

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -11,7 +11,7 @@ action.CaptureAllocations.description=Capture memory allocations data
 action.ContextHelp.text=Conte_xt Help
 action.ContextHelp.description=Show context help
 action.RunConfiguration.text=Select Run/Debug Configuration
-action.SwitchCoverage.text=Code Co_verage Data
+action.SwitchCoverage.text=Show Code Co_verage Data
 action.GenerateCoverageReport.text=_Generate Coverage Report
 action.RunConfiguration.description=Select Run/Debug Configuration
 action.ShowIntentionActions.text=Show Intention Actions
@@ -1058,10 +1058,10 @@ action.WelcomeScreen.CreateDirectoryProject.description=Create a new project
 action.NewDirectoryProject.text=New Project...
 action.NewDirectoryProject.description=Create a new project
 
-action.SliceBackward.text=Dataflow to here
+action.SliceBackward.text=Analyze Dataflow _to here
 action.SliceBackward.description=Search for values which can be assigned to selected expression
 
-action.SliceForward.text=Dataflow from here
+action.SliceForward.text=Analyze Dataflow _from here
 action.SliceSliceForward.description=Search for values escaped from this location
 
 action.ShelvedChanges.Diff.text=Show Diff
