IDEADEV-37208: Inline method leaves the method

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
@@ -69,6 +69,11 @@ method.is.already.defined.in.script=Method {0} is already defined in the script 
 ########################################################################################################################
 inline.refactoring.title=Inline
 inline.method.title=Inline Method
+inline.method.border.title=Inline
+inline.method.label=Method {0}
+all.invocations.and.remove.the.method=&All invocations and remove the method
+all.invocations.in.project=&All invocations in project
+this.invocation.only.and.keep.the.method=&This invocation only and keep the method
 refactoring.cannot.be.applied.to.abstract.methods=Refactoring cannot be applied to abstract methods
 refactoring.cannot.be.applied.no.sources.attached=Refactoring cannot be applied: no sources attached
 refactoring.is.not.supported.when.return.statement.interrupts.the.execution.flow=Refactoring is not supported when return statement interrupts the execution flow
