--- a/plugins/structuralsearch/source/messages/SSRBundle.properties
+++ b/plugins/structuralsearch/source/messages/SSRBundle.properties
@@ -227,3 +227,7 @@ script.tooltip.message=script:{0}
 complete.match.variable.name=Complete Match
 predefined.configuration.sample.method.invokation.with.constant.argument=sample method invokation with constant parameter
 predefined.configuration.interfaces.having.no.descendants=interface that is not implemented or extended
+action.StructuralSearchPlugin.StructuralSearchAction.text=Search S_tructurally...
+action.StructuralSearchPlugin.StructuralSearchAction.description=Structural Search
+action.StructuralSearchPlugin.StructuralReplaceAction.text=Repla_ce Structurally...
+action.StructuralSearchPlugin.StructuralReplaceAction.description=Structural Replace
