RUBY-4996: Structure view updates fixed - YAMLPsiManager implemented

--- a/plugins/yaml/resources/META-INF/plugin.xml
+++ b/plugins/yaml/resources/META-INF/plugin.xml
@@ -18,4 +18,9 @@
     <lang.psiStructureViewFactory language="yaml" implementationClass="org.jetbrains.yaml.structureView.YAMLStructureViewFactory"/>
     <fileTypeIndentOptionsProvider implementation="org.jetbrains.yaml.YAMLIndentationOptionsProvider"/>
   </extensions>
+  <project-components>
+    <component>
+        <implementation-class>org.jetbrains.yaml.psi.YAMLPsiManager</implementation-class>
+    </component>
+  </project-components>
 </idea-plugin>
