--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -61,7 +61,10 @@ java.style.properties.invocation.intention.family.name=Change Java-style accesso
 java.style.properties.invocation.intention.name=Change to Groovy-style property reference
 replace.abstract.class.instance.by.map.intention.family.name=Change anonymous class to dynamic instantiation
 replace.abstract.class.instance.by.map.intention.name=Change to dynamic instantiation
-
+remove.unnecessary.braces.in.g.string.intention.family.name=Remove Unnecessary Braces in GString
+remove.unnecessary.braces.in.g.string.intention.name=Remove unnecessary braces in GString
+convert.concatenation.to.gstring.intention.family.name=Convert String Concatenation to GString
+convert.concatenation.to.gstring.intention.name=Convert to GString
 ###########################################################################################################
 # Convert parameter to map entry refactoring
 ###########################################################################################################
