IDEADEV-40448 (Intention to convert test cases from JUnit version 3 to 4)

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -122,6 +122,11 @@
       <categoryKey>intention.category.junit</categoryKey>
     </intentionAction>
 
+    <intentionAction>
+      <className>com.siyeh.ipp.junit.ConvertJUnit3TestCaseToJUnit4Intention</className>
+      <categoryKey>intention.category.junit</categoryKey>
+    </intentionAction>
+
     <!-- Declaration -->
 
     <!--
@@ -274,7 +279,7 @@
       <categoryKey>intention.category.other</categoryKey>
     </intentionAction>
     <intentionAction>
-      <className>com.siyeh.ipp.expression.FlipSetterCallIntention</className>      
+      <className>com.siyeh.ipp.expression.FlipSetterCallIntention</className>
       <categoryKey>intention.category.other</categoryKey>
     </intentionAction>
     <intentionAction>
