--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -128,6 +128,8 @@ replace.operator.assignment.with.postfix.expression.intention.family.name=Replac
 replace.postfix.expression.with.operator.assignment.intention.family.name=Replace Postfix Expression with Operator Assignment
 replace.postfix.expression.with.assignment.intention.family.name=Replace Postfix Expression with Assignment
 replace.assignment.with.postfix.expression.intention.family.name=Replace Assignment with Postfix Expression
+convert.j.unit3.test.case.to.j.unit4.intention.family.name=Convert JUnit3 Test Case to JUnit4
+convert.j.unit3.test.case.to.j.unit4.intention.name=Convert to JUnit4 Test Case
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
