IDEADEV-40452 (Inspection to flag test methods with redundant exception declarations)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1741,3 +1741,6 @@ listener.may.use.adapter.quickfix=Replace with ''extends {0}''
 listener.may.use.adapter.emtpy.methods.option=&Only warn when empty implementing methods are found
 unnecessary.inherit.doc.display.name=Unnecessary {@inheritDoc} JavaDoc Comment
 unnecessary.inherit.doc.problem.descriptor=JavaDoc comment containing only <code>#ref</code> is unnecessary
+multiple.exceptions.declared.on.test.method.display.name=Multiple exceptions declared on test method
+multiple.exceptions.declared.on.test.method.problem.descriptor=<code>#ref</code> could be replaced with 'throws Exception'
+multiple.exceptions.declared.on.test.method.quickfix=Replace with 'throws Exception'
