Makes default auto-imports non-qualified, gives user a choice how to import importable names. Fixes PY-203 and several small bugs.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -9,10 +9,11 @@ ACT.FAMILY.import=import
 
 # Actions and associated commands
 ACT.NAME.add.import=Add import
-ACT.NAME.use.import=Find in imported modules
+ACT.NAME.use.import=Import this name
 
 ACT.CMD.use.import=Use an imported module
 ACT.qualify.with.module=Qualify with an imported module
+ACT.from.some.module.import=Import from ...
 
 ### Quick fixes ###
 QFIX.add.parameter.self=Add parameter 'self'
@@ -133,6 +134,8 @@ ANN.duplicate.param.name=duplicate parameter name
 ANN.starred.param.after.kwparam=* parameter after ** paremeter
 ANN.regular.param.after.starred=regular parameter after * or ** parameter
 ANN.non.default.param.after.default=non-default parameter follows default parameter
+
+ANN.star.import.at.top.only='import *' only allowed at module level
 
 ### parsing
 PARSE.expected.expression=expression expected
