--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -236,9 +236,9 @@ action.Print.description=Print file
 action.Exit.text=E_xit
 action.Exit.description=Quit IDEA
 group.EditMenu.text=_Edit
-action.$Undo.text=_Undo
+action.$Undo.text=_Undo {0}
 action.$Undo.description=Undo last operation
-action.$Redo.text=_Redo
+action.$Redo.text=_Redo {0}
 action.$Redo.description=Redo last undone operation
 action.$Cut.text=Cu_t
 action.$Cut.description=Cut to clipboard
