--- a/platform/platform-resources-en/src/messages/UIBundle.properties
+++ b/platform/platform-resources-en/src/messages/UIBundle.properties
@@ -116,6 +116,7 @@ create.new.file.could.not.create.file.error.message=Could not create file ''{0}'
 new.file.dialog.title=New File
 file.chooser.create.new.folder.command.name=Create New Folder
 file.chooser.create.new.file.command.name=Create New File
+file.cache.conflict.action=Reload From Disk
 file.cache.conflict.message.text=Changes have been made to \"{0}\"\nin memory and on disk.
 file.cache.conflict.load.fs.changes.button=&Load FS Changes
 file.cache.conflict.keep.memory.changes.button=&Keep Memory Changes
