Quick Fix: Create Abstract Method from Usage

--- a/resources-en/src/messages/QuickFixBundle.properties
+++ b/resources-en/src/messages/QuickFixBundle.properties
@@ -84,6 +84,7 @@ create.local.from.instanceof.usage.family=Create Local Var from instanceof Usage
 create.local.from.instanceof.usage.text=Insert ''({0}){1}'' declaration
 create.method.from.usage.family=Create Method from Usage
 create.method.from.usage.text=Create Method ''{0}''
+create.abstract.method.from.usage.text=Create Abstract Method ''{0}''
 create.parameter.from.usage.family=Create Parameter from Usage
 create.parameter.from.usage.text=Create Parameter ''{0}''
 create.property.from.usage.family=Create Property From Usage
