--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -64,7 +64,7 @@ replace.abstract.class.instance.by.map.intention.name=Change to dynamic instanti
 remove.unnecessary.braces.in.g.string.intention.family.name=Remove Unnecessary Braces in GString
 remove.unnecessary.braces.in.g.string.intention.name=Remove unnecessary braces in GString
 convert.concatenation.to.gstring.intention.family.name=Convert String Concatenation to GString
-convert.concatenation.to.gstring.intention.name=Convert to GString
+convert.concatenation.to.gstring.intention.name=Convert concatenation to GString
 ###########################################################################################################
 # Convert parameter to map entry refactoring
 ###########################################################################################################
