IDEADEV-39498: Groovy​: convert method to closure and back intention

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -65,6 +65,10 @@ remove.unnecessary.braces.in.g.string.intention.family.name=Remove Unnecessary B
 remove.unnecessary.braces.in.g.string.intention.name=Remove unnecessary braces in GString
 convert.concatenation.to.gstring.intention.family.name=Convert String Concatenation to GString
 convert.concatenation.to.gstring.intention.name=Convert concatenation to GString
+convert.closure.to.method.intention.name=Convert to method
+convert.closure.to.method.intention.family.name=Convert property to method
+convert.method.to.closure.intention.name=Convert to property
+convert.method.to.closure.intention.family.name=Convert method to property of closure type
 ###########################################################################################################
 # Convert parameter to map entry refactoring
 ###########################################################################################################
