"Unnecessary JavaDoc link" inspection

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1745,3 +1745,6 @@ unnecessary.inherit.doc.quickfix=Remove unnecessary @inheritDoc
 multiple.exceptions.declared.on.test.method.display.name=Multiple exceptions declared on test method
 multiple.exceptions.declared.on.test.method.problem.descriptor=<code>#ref</code> could be replaced with 'throws Exception'
 multiple.exceptions.declared.on.test.method.quickfix=Replace with 'throws Exception'
+unnecessary.javadoc.link.display.name=Unnecessary JavaDoc link
+unnecessary.javadoc.link.problem.descriptor=<code>#ref</code> is unnecessary
+unnecessary.javadoc.link.quickfix=Remove unnecessary {0}
