IDEADEV-40061: Exclude Spring annotation JMX-exposed methods from "Unused symbol" inspection

--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -328,11 +328,11 @@ inspection.comparing.references.use.quickfix=Use equals()
 inspection.comparing.references.problem.descriptor=Suspicious comparison #ref #loc
 
 inspection.dead.code.display.name=Unused declaration
-inspection.dead.code.option=Automatically add all void main(String args[]) methods to entry points
-inspection.dead.code.option2=Automatically add all JUnit testcases to entry points
-inspection.dead.code.option3=Automatically add all applets to entry points
-inspection.dead.code.option4=Automatically add all servlets to entry points
-inspection.dead.code.option5=Automatically add classes that have usages in non-java files to entry points
+inspection.dead.code.option=<code>void main(String args[])</code> methods
+inspection.dead.code.option2=JUnit testcases
+inspection.dead.code.option3=Applets
+inspection.dead.code.option4=Servlets
+inspection.dead.code.option5=Classes that have usages in non-java files
 inspection.export.results.dead.code=unused declaration
 inspection.dead.code.comment=// --Commented out by Inspection
 inspection.dead.code.date.comment=// --Commented out by Inspection ({0}):
@@ -611,7 +611,7 @@ fix.all.inspection.problems.in.file=Fix all ''{0}'' problems
 severities.default.settings.message=Edit Settings|Colors \\& Fonts
 unsupported.character.for.the.charset=Unsupported characters for the charset ''{0}''
 lossy.encoding=Lossy encoding
-inspection.unused.symbol.public.method.parameters=&Report unused parameters in non-private methods
+inspection.unused.symbol.public.method.parameters=Check parameters in &Non-private methods
 introduce.constant.across.the.project=Introduce Constant Across the Project
 inspection.application.chosen.profile.log\ message=Inspecting with profile ''{0}''
 detach.library.quickfix.name=Detach library
