--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -8,11 +8,11 @@ error.please.select.previous.installation.home=Please select previous {0} instal
 error.selected.current.installation.home=You have selected current {0} installation home.\nPlease select previous {1} installation home
 error.does.not.appear.to.be.installation.home={0} does not appear to be {1} installation home
 error.no.read.permissions=You do not have read permissions to {0}
-radio.do.not.import=I do not have a previous version of IntelliJ IDEA or I do not want to import my settings
+radio.do.not.import=I do not have a previous version of {0} or I do not want to import my settings
 radio.import=I want to import my settings
-label.you.can.import=You can import your settings from the previous version of IntelliJ IDEA.
+label.you.can.import=You can import your settings from the previous version of {0}.
 button.ok=OK
-editbox.installation.home=Specify installation home of the previous version of IntelliJ IDEA
+editbox.installation.home=Specify installation home of the previous version of {0}
 title.code.completion=Code Completion
 editbox.lookup.height=Lookup height (items):
 editbox.autopopup.javadoc.in.ms=Autopopup documentation in (ms):
