--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -532,3 +532,4 @@ annotation.switch.to.merged.text=Show merge sources
 all.vcs.init.message.text=Initializing VCS...
 switch.to.changelist=Switch &to changelist (''{0}'')
 move.to.changelist=&Move changes to active changelist (''{0}'')
+vcs.config.track.changed.on.server=Check "changed on server" conflicts in background
