invokation -> invocation (IDEA-24727)

--- a/plugins/structuralsearch/source/messages/SSRBundle.properties
+++ b/plugins/structuralsearch/source/messages/SSRBundle.properties
@@ -225,7 +225,7 @@ predefined.configuration.static.fields.without.final=static fields that are not 
 invalid.groovy.script=Invalid Groovy Script
 script.tooltip.message=script:{0}
 complete.match.variable.name=Complete Match
-predefined.configuration.sample.method.invokation.with.constant.argument=sample method invokation with constant parameter
+predefined.configuration.sample.method.invokation.with.constant.argument=sample method invocation with constant parameter
 predefined.configuration.interfaces.having.no.descendants=interface that is not implemented or extended
 action.StructuralSearchPlugin.StructuralSearchAction.text=Search S_tructurally...
 action.StructuralSearchPlugin.StructuralSearchAction.description=Structural Search
