don't ask about Groovy facet in UI

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -62,7 +62,7 @@ action.group.groovy.description=Groovy
 ########################################################################################################################
 
 no.java.sdk=No Java SDK configured
-cannot.compile.groovy.files.no.facet=Cannot find Groovy home for module ''{0}''.\nPlease set up Groovy facet.
+cannot.compile.groovy.files.no.facet=Cannot find Groovy home for module ''{0}''.\nPlease set up Groovy SDK.
 cannot.compile.groovy.files.no.sdk=Cannot Compile Groovy Files.\nPlease Set up SDK for module ''{0}''.
 cannot.compile.groovy.files.no.sdk.mult=Cannot Compile Groovy Files.\nPlease Set up SDK for modules ''{0}''.
 cannot.compile=Cannot Compile
@@ -288,7 +288,7 @@ Constructor=Constructor
 facet.create.project.lib=Create &Project Groovy library ''{0}''
 facet.create.application.lib=Create Glob&al Groovy library ''{0}''
 groovy.like.library.found=Groovy library found
-groovy.like.library.found.text=Do you want to set up Groovy facet for module ''{0}'' \n\
+groovy.like.library.found.text=Do you want to set up Groovy for module ''{0}'' \n\
 with found library ''{1}'' (Groovy version {2})?
 compile.groovy.files=&Compile Groovy files
 copy.groovy.files.to.output=Copy Groovy files to output as &resources
