IDEADEV-37525: Spring-EL: disable "Declare variable using jsp:useBean" in spring XML files

--- a/platform/platform-resources-en/src/messages/PsiBundle.properties
+++ b/platform/platform-resources-en/src/messages/PsiBundle.properties
@@ -37,8 +37,8 @@ el.cannot.resolve.namespace=Cannot resolve namespace {0} #loc
 el.cannot.resolve.property=Cannot resolve property or method {0} (dynamic property?) #loc
 el.mismatched.parameters.count=Different number of formal and actual parameters
 el.declare.variable.intention.family=Declare Variable As External Data
-el.declare.variable.via.usebean.intention.name=Declare External Variable As <jsp:useBean />
-el.declare.variable.via.comment.annotation.intention.name=Declare External Variable In Comment Annotation
+el.declare.variable.via.usebean.intention.name=Declare external variable as <jsp:useBean />
+el.declare.variable.via.comment.annotation.intention.name=Declare external variable in comment annotation
 el.cannot.resolve.variable=Cannot resolve variable {0} #loc
 jsf.el.out.of.attribute=JSF EL out of attribute #loc
 jsf.method.call.is.nonstd.extension=Method call is nonstandard extension #loc
